# VaultCity

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: app.js  city.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  vault.rs
