[package]
name = "vaultcity"
version = "1.0.0"
description = "3D Obsidian vault visualizer — your knowledge base as a living city"
authors = ["VaultCity Contributors"]
edition = "2021"

[lib]
name = "vaultcity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
walkdir = "2"
once_cell = "1"
regex = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
